--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Science Lab</title>
-	<link rel="stylesheet" href="style.css">
-	<!-- <link rel="stylesheet" href="https://nomail.com.ua/api/font-face/10247.css"> -->
+	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
 	<div class="container">
 		<header>
 			<h1>
-				<span class="thin">Science</span>
+				Science
 				<b>Lab</b>
 			</h1>
 		</header>
@@ -35,24 +34,23 @@
 		</nav>
 		<main>
 			<picture>
-				<img src="img/lab.png" alt="Science Lab">
+				<img src="./img/lab.png" alt="Science Lab">
 			</picture>
 			<div>
 				<h2>
-					<span class="thin">Welcome to our</span> <b>Lab</b>
+					Welcome to our <b>Lab</b>
 				</h2>
 				<section>
 					<h4 class="heading"> Lorem ipsum dolor sit. </h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto pariatur doloribus repudiandae harum voluptates velit, saepe accusamus suscipit eos exercitationem expedita distinctio magni quis quasi reprehenderit ducimus, rerum sapiente eveniet voluptate minus facilis dolorem. Iusto voluptatibus ullam perferendis odio delectus, blanditiis eius repellat sit facilis.</p>
 					<div>
 						<a href="#more">
-							<img src="img/arrow.png">
+							<img src="./img/arrow.png">
 						</a>
 						</div>
 				</section>
 			</div>
 		</main>
-		<br>
 		<div class="content">
 			<section id="about">
 				<h2>About our Lab</h2>
@@ -64,7 +62,7 @@
 			<div id="info">
 				<section>
 					<picture>
-						<img src="img/researchers.png" alt="Researchers">
+						<img src="./img/researchers.png" alt="Researchers">
 					</picture>
 					<div class="info-block">
 						<h2>Researchers</h2>
@@ -77,7 +75,7 @@
 				<br>
 				<section>
 					<picture>
-						<img src="img/services.png" alt="Services">
+						<img src="./img/services.png" alt="Services">
 					</picture>
 					<div class="info-block">
 						<h2>Services</h2>
